chore: add manual trigger nightly dispatcher workflow

--- a/.github/workflows/nightly-dispatcher.yml
+++ b/.github/workflows/nightly-dispatcher.yml
@@ -1,6 +1,7 @@
 name: Nightly Dispatcher
 
 on:
+  workflow_dispatch:
   # Important note about scheduled workflows:
   # Notifications for scheduled workflows are sent to the user who last modified the cron syntax in the workflow file.
   schedule:
