--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -297,7 +297,7 @@ jobs:
         mode: ["std"]
         era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras) }}
         next_era: [""]
-        cardano_node_version: ["9.1.1", "9.2.1", "10.1.2", "10.1.3"]
+        cardano_node_version: ["10.1.3", "10.1.4"]
         hard_fork_latest_era_at_epoch: [0]
         run_id: ["#1", "#2"]
         extra_args: [""]
@@ -307,7 +307,7 @@ jobs:
           - mode: "p2p"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: [""]
-            cardano_node_version: "10.1.3"
+            cardano_node_version: "10.1.4"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: "--use-p2p-network"
@@ -315,7 +315,7 @@ jobs:
           - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[1] }}
-            cardano_node_version: "10.1.3"
+            cardano_node_version: "10.1.4"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: ""
@@ -323,7 +323,7 @@ jobs:
           - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             next_era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[1] }}
-            cardano_node_version: "10.1.3"
+            cardano_node_version: "10.1.4"
             hard_fork_latest_era_at_epoch: 0
             run_id: "#1"
             extra_args: "--mithril-era-regenesis-on-switch"
