--- a/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
@@ -103,8 +103,9 @@ services:
       - "traefik.http.routers.mithril-aggregator.rule=Host(`${AGGREGATOR_HOST}`)"
       - "traefik.http.routers.mithril-aggregator.tls=true"
       - "traefik.http.routers.mithril-aggregator.tls.certresolver=lets-encrypt"
-      - "traefik.http.routers.mithril-aggregator.middlewares=test-auth"
+      - "traefik.http.routers.mithril-aggregator.middlewares=test-auth,test-compress"
       - "traefik.http.middlewares.test-auth.basicauth.users=${AUTH_USER_PASSWORD}"
+      - "traefik.http.middlewares.test-compress.compress=true"
 
 networks:
   default:
