--- a/mithril-infra/assets/docker/docker-compose-aggregator-noauth-p2p.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-noauth-p2p.yaml
@@ -103,6 +103,8 @@ services:
       - "traefik.http.routers.mithril-aggregator.rule=Host(`${AGGREGATOR_HOST}`)"
       - "traefik.http.routers.mithril-aggregator.tls=true"
       - "traefik.http.routers.mithril-aggregator.tls.certresolver=lets-encrypt"
+      - "traefik.http.routers.mithril-aggregator.middlewares=test-compress"
+      - "traefik.http.middlewares.test-compress.compress=true"
 
   mithril-aggregator-relay:
     image: ghcr.io/input-output-hk/mithril-relay:${MITHRIL_IMAGE_ID}
