chore: upgrade traefik reverse proxy
From '2.10' to '3.3'.

--- a/mithril-infra/assets/docker/traefik/traefik.toml
+++ b/mithril-infra/assets/docker/traefik/traefik.toml
@@ -1,5 +1,5 @@
 [log]
-  level = "WARN"
+  level = "INFO"
 
 [providers]
   [providers.docker]
@@ -32,4 +32,3 @@
     addEntryPointsLabels = true
     addRoutersLabels = true
     addServicesLabels = true
-
