--- a/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
@@ -80,6 +80,7 @@ services:
       - CARDANO_TRANSACTIONS_DATABASE_CONNECTION_POOL_SIZE=${CARDANO_TRANSACTIONS_DATABASE_CONNECTION_POOL_SIZE}
       - CARDANO_TRANSACTIONS_SIGNING_CONFIG__SECURITY_PARAMETER=${CARDANO_TRANSACTIONS_SIGNING_CONFIG__SECURITY_PARAMETER}
       - CARDANO_TRANSACTIONS_SIGNING_CONFIG__STEP=${CARDANO_TRANSACTIONS_SIGNING_CONFIG__STEP}
+      - PUBLIC_SERVER_URL=${PUBLIC_SERVER_URL}
       - ENABLE_METRICS_SERVER=${ENABLE_METRICS_SERVER}
       - METRICS_SERVER_IP=${METRICS_SERVER_IP}
       - METRICS_SERVER_PORT=${METRICS_SERVER_PORT}
