--- a/mithril-infra/assets/docker/docker-compose-aggregator-noauth.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-noauth.yaml
@@ -105,6 +105,7 @@ services:
       - "traefik.http.routers.mithril-aggregator.tls.certresolver=lets-encrypt"
       - "traefik.http.routers.mithril-aggregator.middlewares=test-compress"
       - "traefik.http.middlewares.test-compress.compress=true"
+      - "traefik.http.middlewares.test-compress.compress.encodings=gzip"
 
 networks:
   default:
