chore(aggregator, client-cli, signer): remove dependency to openssl
As we will use `native-tls-vendored` throught `reqwest` instead

--- a/mithril-aggregator/Cargo.toml
+++ b/mithril-aggregator/Cargo.toml
@@ -30,8 +30,6 @@ mithril-common = { path = "../mithril-common", features = ["full"] }
 mithril-doc = { path = "../internal/mithril-doc" }
 mithril-metric = { path = "../internal/mithril-metric" }
 mithril-persistence = { path = "../internal/mithril-persistence" }
-openssl = { version = "0.10.68", features = ["vendored"], optional = true }
-openssl-probe = { version = "0.1.5", optional = true }
 paste = "1.0.15"
 prometheus = "0.13.4"
 rayon = "1.10.0"
@@ -80,5 +78,5 @@ tempfile = "3.14.0"
 [features]
 default = ["jemallocator"]
 
-bundle_openssl = ["dep:openssl", "dep:openssl-probe"]
+bundle_openssl = []
 jemallocator = ["dep:tikv-jemallocator"]
