--- a/mithril-client-cli/Cargo.toml
+++ b/mithril-client-cli/Cargo.toml
@@ -32,7 +32,7 @@ fs2 = "0.4.3"
 futures = "0.3.31"
 human_bytes = { version = "0.4.3", features = ["fast"] }
 indicatif = { version = "0.17.9", features = ["tokio"] }
-mithril-client = { path = "../mithril-client", features = ["fs", "unstable"] }
+mithril-client = { path = "../mithril-client", features = ["fs", "native-tls-vendored", "unstable"] }
 mithril-doc = { path = "../internal/mithril-doc" }
 openssl = { version = "0.10.68", features = ["vendored"], optional = true }
 openssl-probe = { version = "0.1.5", optional = true }
