--- a/mithril-aggregator/Cargo.toml
+++ b/mithril-aggregator/Cargo.toml
@@ -34,7 +34,7 @@ paste = "1.0.15"
 prometheus = "0.13.4"
 rayon = "1.10.0"
 regex = "1.11.1"
-reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
+reqwest = { version = "0.12.12", features = ["json"] }
 semver = "1.0.24"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
@@ -78,5 +78,5 @@ tempfile = "3.14.0"
 [features]
 default = ["jemallocator"]
 
-bundle_openssl = []
+bundle_tls = ["reqwest/native-tls-vendored"]
 jemallocator = ["dep:tikv-jemallocator"]
