--- a/mithril-client-cli/Cargo.toml
+++ b/mithril-client-cli/Cargo.toml
@@ -32,7 +32,7 @@ fs2 = "0.4.3"
 futures = "0.3.31"
 human_bytes = { version = "0.4.3", features = ["fast"] }
 indicatif = { version = "0.17.9", features = ["tokio"] }
-mithril-client = { path = "../mithril-client", features = ["fs", "native-tls-vendored", "unstable"] }
+mithril-client = { path = "../mithril-client", features = ["fs", "unstable"] }
 mithril-doc = { path = "../internal/mithril-doc" }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
@@ -50,4 +50,4 @@ tokio = { version = "1.42.0", features = ["full"] }
 mithril-common = { path = "../mithril-common", features = ["test_tools"] }
 
 [features]
-bundle_openssl = []
+bundle_tls = ["mithril-client/native-tls-vendored"]
