chore: remove `bundle_tls` from makefiles recipes
As it ask for supplemental dependencies that are not consistent with the
other recipes, plus they are not used in the CI.

--- a/mithril-aggregator/Makefile
+++ b/mithril-aggregator/Makefile
@@ -5,7 +5,7 @@ CARGO = cargo
 all: test build
 
 build:
-	${CARGO} build --release --features bundle_tls
+	${CARGO} build
 	cp ../target/release/mithril-aggregator .
 
 run: build
