feat(client): enable HTTP compression using reqwest features

--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -84,7 +84,7 @@ warp = "0.3.7"
 
 [features]
 # Include native-tls in reqwest by default
-default = ["native-tls", "rug-backend"]
+default = ["native-tls", "rug-backend", "enable-http-compression"]
 
 # Full feature set
 full = ["fs"]
@@ -104,6 +104,9 @@ rustls-tls = ["reqwest/rustls-tls"]
 rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
 rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
 rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
+
+# Support compressed traffic with `request`
+enable-http-compression = ["reqwest/gzip", "reqwest/zstd", "reqwest/deflate", "reqwest/brotli"]
 
 # Enables `rug-backend` features for `mithril-common` dependency
 rug-backend = ["mithril-common/rug-backend"]
