--- a/mithril-aggregator/Cargo.toml
+++ b/mithril-aggregator/Cargo.toml
@@ -31,6 +31,8 @@ mithril-doc = { path = "../internal/mithril-doc" }
 mithril-metric = { path = "../internal/mithril-metric" }
 mithril-persistence = { path = "../internal/mithril-persistence" }
 mithril-resource-pool = { path = "../internal/mithril-resource-pool" }
+mithril-signed-entity-lock = { path = "../internal/signed-entity/mithril-signed-entity-lock" }
+mithril-transaction-preloader = { path = "../internal/signed-entity/mithril-transaction-preloader" }
 rayon = "1.10.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.12", features = [
